# django-rich-logging

./: .gitignore  CHANGELOG.md  DEVELOPING.md  README.md  conftest.py  pyproject.toml
django_rich_logging/: logging.py  objects.py
docs/source/: conf.py  index.md
example/project/: settings.py  urls.py
example/www/: apps.py  views.py
tests/: urls.py
tests/logging/django_request_handler/: test_add_column_headers.py  test_emit.py  test_get_markup.py  test_init.py
tests/objects/: test_request.py
